Added in 5 main sections

--- a/Main.html
+++ b/Main.html
@@ -1,9 +1,16 @@
-<html> 
-  <head>
-    <title>Test</title> 
-  </head>
-
-  <body> 
-    <h1>Hello World</h1> 
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Airbnb</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="airbnb" content="Airbnb" />
+  <section id="search bar"></section>
+  <section id="bar buttons"></section>
+</head>
+<body>
+  <section id="first listing"></section>
+  <section id="second listing"></section>
+  <section id="bottom bar"></section>
+</body>
 </html>
