Adding text to search bar

--- a/Main.html
+++ b/Main.html
@@ -5,7 +5,9 @@
   <title>Airbnb</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="airbnb" content="Airbnb" />
-  <section id="search bar"></section>
+  <section id="search bar">
+    <p>Anywhere</p>
+  </section>
   <section id="bar buttons"></section>
 </head>
 <body>
