Change ids to class for the sections

--- a/Main.html
+++ b/Main.html
@@ -5,13 +5,13 @@
   <title>Airbnb</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="airbnb" content="Airbnb" />
-  <section id="search bar">
+  <section class="search bar">
   </section>
-  <section id="bar buttons"></section>
+  <section class="bar buttons"></section>
 </head>
 <body>
-  <section id="first listing"></section>
-  <section id="second listing"></section>
-  <section id="bottom bar"></section>
+  <section class="first listing"></section>
+  <section class="second listing"></section>
+  <section class="bottom bar"></section>
 </body>
 </html>
