Added rectangle and drop shadow

--- a/Main.html
+++ b/Main.html
@@ -5,11 +5,15 @@
   <title>Airbnb</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="airbnb" content="Airbnb" />
-  <section class="search bar">
-  </section>
-  <section class="bar buttons"></section>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <section class="search-bar-container">
+    <div class="search-bar">
+      
+    </div>
+  </section>
+  <section class="bar buttons"></section>
   <section class="first listing"></section>
   <section class="second listing"></section>
   <section class="bottom bar"></section>
