added search bar and text

--- a/Main.html
+++ b/Main.html
@@ -6,11 +6,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="airbnb" content="Airbnb" />
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/9720b9f437.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <section class="search-bar-container">
     <div class="search-bar">
-      
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <div>
+        <p>Anywhere</p>
+        <p>Any week · Add guests</p>
+      </div>
     </div>
   </section>
   <section class="bar buttons"></section>
