Added text, icons and shapes to the search bar container

--- a/Main.html
+++ b/Main.html
@@ -13,10 +13,13 @@
     <div class="search-bar">
       <i class="fa-solid fa-magnifying-glass"></i>
       <div>
-        <p>Anywhere</p>
-        <p>Any week · Add guests</p>
+        <p class="search-bar-anywhere">Anywhere</p>
+        <p class="search-bar-any-week">Any week · Add guests</p>
       </div>
     </div>
+    <div class="search-filters">
+      <img class="filter-icon" src="/assets/filter.png"></img>
+    </div> 
   </section>
   <section class="bar buttons"></section>
   <section class="first listing"></section>
