Added icons and text to the bar of buttons

--- a/Main.html
+++ b/Main.html
@@ -21,7 +21,28 @@
       <img class="filter-icon" src="/assets/filter.png"></img>
     </div> 
   </section>
-  <section class="bar buttons"></section>
+  <section class="bar-buttons-container">
+    <div class="bar-buttons-icon active">
+      <img src="/assets/New.png"></img>
+      <p>New</p>
+    </div>
+    <div class="bar-buttons-icon">
+      <img src="/assets/Pool.png"></img>
+      <p>Amazing pools</p>
+    </div>
+    <div class="bar-buttons-icon">
+      <img src="/assets/Play.png"></img>
+      <p>Play</p>
+    </div>
+    <div class="bar-buttons-icon">
+      <img src="/assets/Vineyards.png"></img>
+      <p>Vineyards</p>
+    </div>
+    <div class="bar-buttons-icon">
+      <img src="/assets/Tower.png"></img>
+      <p>Towers</p>
+    </div>
+  </section>
   <section class="first listing"></section>
   <section class="second listing"></section>
   <section class="bottom bar"></section>
