added the line spacer between sections

--- a/Main.html
+++ b/Main.html
@@ -43,6 +43,7 @@
       <p>Towers</p>
     </div>
   </section>
+  <div class="line"></div>
   <section class="first listing"></section>
   <section class="second listing"></section>
   <section class="bottom bar"></section>
