created first listing, including images, icons and text

--- a/Main.html
+++ b/Main.html
@@ -44,7 +44,27 @@
     </div>
   </section>
   <div class="line"></div>
-  <section class="first listing"></section>
+  <section class="first-listing-container">
+    <div class="first-listing-images">
+      <img class="listing-image-one" src="/assets/airbnb image.jpg">
+        <img class="listing-image-heart" src="/assets/heart.png"></img>
+      </img>
+    </div>
+    <div class="first-listing-text-container">
+    <div class="listing-text">
+    <div class="listing-text-one">
+      <h3 class="listing-text-one active">Minden, New Zealand</h3>
+      <p>Added 5 weeks ago</p>
+      <p>7-12 Jan · Individual Host</p>
+      <p class="listing-text-one active-two"><strong class="listing-text-one-price">£929</strong> total</p>
+    </div>
+      <div class="listing-text-one-new">
+        <img class="star-icon" src="/assets/star.png"></img>
+        <p>New</p>
+      </div>
+    </div>
+    </div>
+  </section>
   <section class="second listing"></section>
   <section class="bottom bar"></section>
 </body>
