Added second listing including section above bottom bar

--- a/Main.html
+++ b/Main.html
@@ -65,7 +65,16 @@
     </div>
     </div>
   </section>
-  <section class="second listing"></section>
+  <section class="second-listing-container">
+    <div class="second-listing-images">
+      <img class="listing-image-two" src="/assets/second-listing.jpeg"></img>
+      <img class="listing-image-heart" src="/assets/heart.png"></img>
+    </div>
+  </section>
+  <div class="line"></div>
+  <div class="learn-about-bar">
+    <p>Learn about Guest Favourites</p>
+  </div>
   <section class="bottom bar"></section>
 </body>
 </html>
