Added the bottom navigation bar including all its content

--- a/Main.html
+++ b/Main.html
@@ -75,6 +75,20 @@
   <div class="learn-about-bar">
     <p>Learn about Guest Favourites</p>
   </div>
-  <section class="bottom bar"></section>
+  <div class="line-active"></div>
+  <section class="bottom-navigation-container">
+      <div class="navigation-icon">
+        <img class="bottom-navigation-icons" src="/assets/red-search.png"></img>
+        <p class="red-explore-text">Explore</p>
+      </div>
+      <div class="navigation-icon">
+        <img class="bottom-navigation-icons" src="/assets/grey-heart.png"></img>
+        <p>Wishlists</p>
+      </div>
+      <div class="navigation-icon">
+        <img class="bottom-navigation-icons" src="/assets/grey-user.png"></img>
+        <p>Log in</p>
+      </div>
+  </section>
 </body>
 </html>
