Got the SVG file for the heart and filter icons from airbnbs site, forgot to change branches so committing this on the main

--- a/Main.html
+++ b/Main.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="search-filters">
-      <img class="filter-icon" src="/assets/filter.png"></img>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"><path fill="none" d="M7 16H3m26 0H15M29 6h-4m-8 0H3m26 20h-4M7 16a4 4 0 1 0 8 0 4 4 0 0 0-8 0zM17 6a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 20a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 0H3"></path></svg>
     </div> 
   </section>
   <section class="bar-buttons-container">
@@ -47,8 +47,7 @@
   <section class="first-listing-container">
     <div class="first-listing-images">
       <img class="listing-image-one" src="/assets/airbnb image.jpg">
-        <img class="listing-image-heart" src="/assets/heart.png"></img>
-      </img>
+      <svg class="listing-image-heart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;"><path d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"></path></svg>      </img>
     </div>
     <div class="first-listing-text-container">
     <div class="listing-text">
