--- a/Main.html
+++ b/Main.html
@@ -77,15 +77,15 @@
   <div class="line-active"></div>
   <section class="bottom-navigation-container">
       <div class="navigation-icon">
-        <img class="bottom-navigation-icons" src="/assets/red-search.png"></img>
+        <svg class="red-search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 24px; width: 24px; stroke: currentcolor; stroke-width: 2.66667; overflow: visible;"><g fill="none"><circle cx="12" cy="12" r="10"></circle><path d="m19 19 11 11"></path></g></svg>
         <p class="red-explore-text">Explore</p>
       </div>
       <div class="navigation-icon">
-        <img class="bottom-navigation-icons" src="/assets/grey-heart.png"></img>
+        <svg class="navigation-bottom-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 24px; width: 24px; stroke: currentcolor; stroke-width: 2; overflow: visible;"><path d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z"></path></svg>
         <p>Wishlists</p>
       </div>
       <div class="navigation-icon">
-        <img class="bottom-navigation-icons" src="/assets/grey-user.png"></img>
+        <svg class="navigation-bottom-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 24px; width: 24px; stroke: currentcolor; stroke-width: 2; overflow: visible;"><g fill="none"><circle cx="16" cy="16" r="14"></circle><path d="M14.02 19.66a6 6 0 1 1 3.96 0M17.35 19.67H18c3.69.61 6.8 2.91 8.54 6.08m-20.92-.27A12.01 12.01 0 0 1 14 19.67h.62"></path></g></svg>
         <p>Log in</p>
       </div>
   </section>
