Reduced the line height for the search bar text

--- a/Main.html
+++ b/Main.html
@@ -12,7 +12,7 @@
   <section class="search-bar-container">
     <div class="search-bar">
       <svg class="search-bar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 20px; width: 20px; fill: currentcolor;"><path d="M13 0a13 13 0 0 1 10.5 20.67l7.91 7.92-2.82 2.82-7.92-7.91A12.94 12.94 0 0 1 13 26a13 13 0 1 1 0-26zm0 4a9 9 0 1 0 0 18 9 9 0 0 0 0-18z"></path></svg>
-      <div>
+      <div class="search-bar-line-height">
         <p class="search-bar-anywhere">Anywhere</p>
         <p class="search-bar-any-week">Any week · Add guests</p>
       </div>
