Added a line underneath the word New on the bar buttons

--- a/Main.html
+++ b/Main.html
@@ -43,6 +43,7 @@
       <p>Towers</p>
     </div>
   </section>
+  <div class="new-underline"></div>
   <div class="line"></div>
   <section class="first-listing-container">
     <div class="first-listing-images">
